--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/* Global Styles */
 body, h1, h2, h3, p, a, ul, li, form, input, textarea, button {
     margin: 0;
     padding: 0;
@@ -31,7 +30,7 @@ header .logo {
 }
 
 header .logo img {
-    max-height: 50px; /* Adjust based on your logo size */
+    max-height: 50px;
 
 }
 
@@ -110,16 +109,15 @@ nav ul li a {
 }
 
 /* Services */
-/* Services */
 .services {
     background: #f8f9fa;
     padding: 60px 20px;
-    text-align: center; /* Center text inside the section */
+    text-align: center; 
 }
 
 .services .container {
-    max-width: 1200px; /* Adjust as needed */
-    margin: 0 auto; /* Center container horizontally */
+    max-width: 1200px; 
+    margin: 0 auto; 
 }
 
 .services h2 {
@@ -127,17 +125,16 @@ nav ul li a {
     padding-bottom: 30px;;
 }
 
-/* Flexbox for centering the service items */
 /* Services */
 .services {
     background: #35a0fe;
     padding: 60px 20px;
-    text-align: center; /* Center text inside the section */
+    text-align: center;  
 }
 
 .services .container {
-    max-width: auto; /* Adjust as needed */
-    margin: 0 auto; /* Center container horizontally */
+    max-width: auto;  
+    margin: 0 auto; 
     display: flex;
     flex-direction: column; /* Stack children vertically */
     align-items: center; /* Center children horizontally */
@@ -145,7 +142,7 @@ nav ul li a {
 
 .services h2 {
     font-size: 28px;
-    margin-bottom: 0px; /* Increase space below the heading */
+    margin-bottom: 0px;  
 }
 
 .services .service {
@@ -156,7 +153,7 @@ nav ul li a {
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.9);
     flex: 1 1 0px; /* Make items flexible with a base size */
-    margin: 10px; /* Add margin to ensure space between items */
+    margin: 10px;  
     text-align: center; /* Center text inside each service */
 }
 
